# photo-booth

./: .gitignore  Cargo.toml  README.md
assets/: config.example.json
src/: camera_feed.rs  camerafeed.rs  config.rs  main.rs  screens.rs  utils.rs
src/screens/: alert_screen.rs  app.rs  camera_screen.rs  camera_select.rs  config_screen.rs  email_screen.rs  error_screen.rs  generation_screen.rs  printing_screen.rs  sending_screen.rs
src/screens/camera_screen/: camera_feed.rs  element_strip_renderer.rs
src/screens/camera_screen/camera_feed/: border_radius.rs
src/screens/generation_screen/: image_strip_renderer.rs
src/screens/printing_screen/: image_strip_renderer.rs
src/utils/: camera_button.rs  circle.rs  container_styles.rs  loading_spinners.rs  template_image.rs
src/utils/loading_spinners/: circular.rs  easing.rs  linear.rs
