[package]
name = "photo-booth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["image", "tokio"] }
iced_aw = { version = "0.7.0" }
image = "0.24.8"
nokhwa = { git = "https://github.com/zabackary/nokhwa.git", branch = "0.10", features = [
  "input-native",
  "output-threaded",
] }
tokio = { version = "1.36.0", features = ["full"] }
