[package]
name = "photo-booth"
version = "0.1.0"
edition = "2021"

[features]
fast_animations = [] # very fast animations for debugging faster

[dependencies]
email_address = "0.2.4"
iced = { version = "0.12.1", features = ["image", "tokio", "debug"] }
iced_aw = { version = "0.8.0", features = ["drop_down"] }
image = "0.24.8"
nokhwa = { git = "https://github.com/zabackary/nokhwa.git", branch = "0.10", features = [
  "input-native",
  "output-threaded",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
anim = "0.1.4"
