[package]
name = "photo-booth"
version = "1.0.0"
edition = "2021"

[features]
fast_animations = [] # very fast animations for debugging faster

[dependencies]
base64 = "0.22.1"
email_address = "0.2.4"
iced = { version = "0.12.1", features = ["image", "tokio", "debug"] }
iced_aw = { version = "0.8.0", features = ["drop_down"] }
image = "0.24.8"
lyon_algorithms = "1.0.4"
nokhwa = { git = "https://github.com/zabackary/nokhwa.git", branch = "0.10", features = [
  "input-native",
  "output-threaded",
] }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
anim = "0.1.4"
